--- a/index.html
+++ b/index.html
@@ -1,71 +1,6 @@
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-    <meta charset="UTF-8">
-    <title>👑 مملكة علوش الأسطورية 👑</title>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <style>
-        body { background: #000; color: gold; font-family: sans-serif; text-align: center; margin: 0; }
-        #royal-header { background: linear-gradient(gold, #8a6d3b); color: #000; padding: 15px; font-weight: bold; font-size: 24px; box-shadow: 0 0 15px gold; }
-        #chat-screen { height: 50vh; overflow-y: auto; background: rgba(0,0,0,0.9); border: 2px solid gold; margin: 10px auto; width: 90%; padding: 10px; border-radius: 15px; text-align: left; }
-        #search-box { position: fixed; top: 70px; right: 10px; width: 220px; background: #111; border: 2px solid gold; padding: 10px; border-radius: 10px; z-index: 100; }
-        iframe { width: 100%; height: 150px; border-radius: 8px; margin-top: 5px; }
-        #input-area { position: fixed; bottom: 10px; width: 100%; }
-        input { padding: 10px; border-radius: 20px; border: 1px solid gold; background: #222; color: #fff; width: 60%; }
-        button { padding: 10px 20px; border-radius: 20px; background: gold; color: #000; font-weight: bold; cursor: pointer; }
-    </style>
-</head>
-<body>
-
-    <div id="royal-header">👑 مملكة علوش: محرك التشغيل الفوري 👑</div>
-
-    <div id="search-box">
-        <input id="video-name" type="text" placeholder="اكتب اسم الأغنية/الفيديو..." style="width: 90%; margin-bottom: 5px;">
-        <button onclick="forcePlay()" style="width: 100%;">تشغيل فوري 🎬</button>
-        <div id="player-area"></div>
-    </div>
-
-    <div id="chat-screen"></div>
-
-    <div id="input-area">
-        <input id="chat-msg" type="text" placeholder="اكتب مرسومك الملكي...">
-        <button onclick="sendMsg()">إرسال ✨</button>
-    </div>
-
-    <script>
-        // ربط السيرفر
-        const firebaseConfig = { databaseURL: "https://alloush-kingdom-default-rtdb.firebaseio.com" };
-        firebase.initializeApp(firebaseConfig);
-        const db = firebase.database();
-
-        // حل مشكلة "غير متوفر" - تشغيل عبر محرك بحث يوتيوب المباشر
-        function forcePlay() {
-            let name = document.getElementById('video-name').value;
-            if(name) {
-                let embedUrl = "https://www.youtube.com/embed?listType=search&list=" + encodeURIComponent(name);
-                document.getElementById('player-area').innerHTML = `<iframe src="${embedUrl}" frameborder="0" allowfullscreen></iframe>`;
-            }
-        }
-
-        function sendMsg() {
-            let msg = document.getElementById('chat-msg');
-            let isKing = localStorage.getItem("is_king") === "true";
-            if(msg.value.trim() !== "") {
-                db.ref("messages").push().set({
-                    user: isKing ? "👑 علوش" : "زائر",
-                    text: msg.value,
-                    rank: isKing ? "ملك المملكة" : "مواطن"
-                });
-                msg.value = "";
-            }
-        }
-
-        db.ref("messages").on("child_added", (snapshot) => {
-            let data = snapshot.val();
-            document.getElementById('chat-screen').innerHTML += `<div><b>[${data.rank}] ${data.user}:</b> ${data.text}</div>`;
-            document.getElementById('chat-screen').scrollTop = document.getElementById('chat-screen').scrollHeight;
-        });
-    </script>
-</body>
-</html>
+function forcePlay() {
+    let name = document.getElementById('video-name').value;
+    if(name) {
+        window.open("https://www.youtube.com/results?search_query=" + encodeURIComponent(name), "_blank");
+    }
+}
