--- a/index.html
+++ b/index.html
@@ -1,6 +1,85 @@
-function forcePlay() {
-    let name = document.getElementById('video-name').value;
-    if(name) {
-        window.open("https://www.youtube.com/results?search_query=" + encodeURIComponent(name), "_blank");
-    }
-}
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <title>👑 مملكة علوش الأسطورية 👑</title>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <style>
+        body { background: radial-gradient(circle, #1a1a1a, #000); color: gold; font-family: sans-serif; text-align: center; margin: 0; overflow: hidden; }
+        #royal-header { background: linear-gradient(to bottom, #d4af37, #8a6d3b); color: #000; padding: 12px; font-weight: bold; font-size: 26px; box-shadow: 0 0 20px gold; }
+        #stats-bar { display: flex; justify-content: space-around; background: rgba(255,215,0,0.1); padding: 8px; border-bottom: 2px solid gold; font-size: 14px; }
+        #chat-screen { height: 50vh; overflow-y: auto; background: rgba(0,0,0,0.85); border: 3px double gold; margin: 20px auto; width: 90%; padding: 15px; border-radius: 15px; text-align: left; box-shadow: inset 0 0 15px gold; }
+        .msg { margin-bottom: 12px; border-bottom: 1px dashed #444; padding: 5px; }
+        .king-style { color: gold; font-weight: bold; text-shadow: 0 0 8px gold; }
+        #youtube-search-box { position: absolute; top: 70px; right: 20px; width: 230px; background: rgba(0,0,0,0.9); border: 2px solid gold; padding: 10px; border-radius: 12px; z-index: 1000; }
+        #search-query { width: 85%; padding: 8px; margin-bottom: 8px; border-radius: 8px; background: #111; color: #fff; border: 1px solid gold; outline: none; }
+        #input-area { position: fixed; bottom: 20px; width: 100%; display: flex; justify-content: center; gap: 10px; }
+        input#chat-input { width: 60%; padding: 14px; border-radius: 30px; border: 2px solid gold; background: #111; color: #fff; outline: none; }
+        .royal-btn { padding: 12px 25px; border-radius: 30px; background: gold; color: #000; font-weight: bold; cursor: pointer; border: none; transition: 0.3s; }
+    </style>
+</head>
+<body>
+
+    <div id="royal-header">👑 مملكة علوش: الإصدار 70 الكامل 👑</div>
+    
+    <div id="stats-bar">
+        <span>الزوار الآن: <b id="visitor-count">2</b></span>
+        <span>الحماية: <b style="color: lime;">مفعلة ✅</b></span>
+    </div>
+
+    <div id="youtube-search-box">
+        <input id="video-name" type="text" placeholder="ابحث بالاسم يا ملك...">
+        <button class="royal-btn" onclick="forcePlay()" style="width:100%; padding:8px;">بحث وتشغيل 🔍</button>
+    </div>
+
+    <div id="chat-screen"></div>
+    
+    <div id="input-area">
+        <input id="chat-input" type="text" placeholder="اكتب مرسومك الملكي...">
+        <button class="royal-btn" onclick="sendMsg()">إرسال ✨</button>
+    </div>
+
+    <script>
+        const firebaseConfig = { databaseURL: "https://alloush-kingdom-default-rtdb.firebaseio.com" };
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.database();
+
+        // وظيفة البحث الملكي - تفتح في صفحة جديدة لضمان التشغيل
+        function forcePlay() { 
+            let name = document.getElementById('video-name').value; 
+            if(name) { 
+                window.open("https://www.youtube.com/results?search_query=" + encodeURIComponent(name), "_blank"); 
+            } 
+        }
+
+        function sendMsg() {
+            let input = document.getElementById('chat-input');
+            let isKing = localStorage.getItem("is_king") === "true";
+            if(input.value.trim() !== "") {
+                db.ref("messages").push().set({
+                    user: isKing ? "👑 علوش" : "زائر",
+                    text: input.value,
+                    rank: isKing ? "ملك المملكة" : "مواطن",
+                    isKing: isKing
+                });
+                input.value = "";
+            }
+        }
+
+        db.ref("messages").on("child_added", (snapshot) => {
+            let msg = snapshot.val();
+            let style = msg.isKing ? 'king-style' : 'color:white;';
+            document.getElementById('chat-screen').innerHTML += `
+                <div class="msg">
+                    <span class="${style}">[${msg.rank}] ${msg.user}:</span> ${msg.text}
+                </div>`;
+            document.getElementById('chat-screen').scrollTop = document.getElementById('chat-screen').scrollHeight;
+        });
+
+        setInterval(() => {
+            document.getElementById('visitor-count').innerText = Math.floor(Math.random() * 3) + 2;
+        }, 8000);
+    </script>
+</body>
+</html>
