--- a/index.html
+++ b/index.html
@@ -2,128 +2,114 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>👑 شات مملكة علوش الأسطوري</title>
+    <title>👑 شات مملكة علوش - النسخة الاحترافية</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <style>
-        :root { --gold: #d4af37; --bg: #050505; --panel: #111; }
-        body { margin: 0; font-family: 'Segoe UI', Tahoma; background: var(--bg); color: #fff; display: flex; height: 100vh; overflow: hidden; }
+        body { margin: 0; padding: 0; font-family: Tahoma, Geneva, sans-serif; background: #222; overflow: hidden; height: 100vh; display: flex; flex-direction: column; }
         
-        /* القائمة الجانبية الكاملة */
-        #sidebar { width: 280px; background: var(--panel); border-left: 2px solid var(--gold); display: flex; flex-direction: column; }
-        .profile-card { padding: 30px 15px; text-align: center; border-bottom: 2px solid #222; background: linear-gradient(to bottom, #1a1a1a, #050505); }
-        .user-pic { width: 100px; height: 100px; border-radius: 50%; border: 3px solid var(--gold); box-shadow: 0 0 20px var(--gold); margin-bottom: 10px; cursor: pointer; }
-        .king-name { font-size: 20px; font-weight: bold; color: var(--gold); text-shadow: 0 0 5px #000; }
+        /* الهيدر العلوي */
+        #top-bar { background: #000; height: 40px; border-bottom: 2px solid #d4af37; display: flex; align-items: center; padding: 0 20px; color: #d4af37; font-weight: bold; justify-content: space-between; }
+
+        /* منطقة الشات والأسماء */
+        #container { display: flex; flex: 1; overflow: hidden; background: #333; }
+
+        /* قائمة الأسماء (مثل أهلنا) */
+        #user-list { width: 220px; background: #1a1a1a; border-left: 1px solid #444; overflow-y: auto; }
+        .user-row { padding: 8px 15px; border-bottom: 1px solid #2a2a2a; display: flex; align-items: center; gap: 8px; font-size: 13px; }
+        .user-row img { width: 20px; height: 20px; border-radius: 3px; }
+        .king-name { color: #ffcc00; font-weight: bold; text-shadow: 1px 1px #000; }
+
+        /* منطقة عرض الرسائل */
+        #chat-window { flex: 1; display: flex; flex-direction: column; background: #fff; }
+        #messages { flex: 1; overflow-y: auto; padding: 10px; display: flex; flex-direction: column; }
+
+        /* شكل سطر الدردشة الكلاسيكي */
+        .chat-line { margin-bottom: 5px; font-size: 14px; border-bottom: 1px dotted #ccc; padding-bottom: 3px; }
+        .king-tag { color: #ff0000; font-weight: bold; }
+        .time { color: #888; font-size: 11px; margin-left: 5px; }
+
+        /* صندوق الإرسال السفلي */
+        #footer { background: #f0f0f0; border-top: 2px solid #d4af37; padding: 10px; display: flex; gap: 10px; align-items: center; }
+        #msg-input { flex: 1; padding: 10px; border: 1px solid #aaa; border-radius: 4px; outline: none; font-size: 14px; }
+        .btn-send { background: linear-gradient(#d4af37, #8a6d3b); color: #000; border: 1px solid #000; padding: 8px 25px; cursor: pointer; font-weight: bold; }
         
-        /* شاشة الدردشة */
-        #chat-main { flex-grow: 1; display: flex; flex-direction: column; position: relative; }
-        header { padding: 15px 25px; background: #000; border-bottom: 2px solid var(--gold); display: flex; justify-content: space-between; align-items: center; }
-        #messages-view { flex-grow: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 10px; background-image: radial-gradient(#1a1a1a 1px, transparent 1px); background-size: 20px 20px; }
-
-        /* الفقاعات الاحترافية */
-        .bubble { max-width: 70%; padding: 12px 18px; border-radius: 20px; font-size: 15px; position: relative; line-height: 1.5; }
-        .king-bubble { align-self: flex-start; background: #1a1a1a; border-right: 4px solid var(--gold); color: var(--gold); font-weight: bold; border-top-right-radius: 2px; }
-        .user-bubble { align-self: flex-end; background: #333; color: #fff; border-top-left-radius: 2px; }
-        .meta { font-size: 10px; margin-bottom: 4px; opacity: 0.6; display: block; }
-
-        /* لوحة التحكم الجاهزة */
-        #admin-box { position: absolute; top: 70px; right: 20px; background: #1a1a1a; border: 1px solid var(--gold); padding: 15px; border-radius: 12px; display: none; z-index: 100; width: 200px; }
-        .adm-btn { width: 100%; padding: 10px; margin-bottom: 10px; background: #000; color: var(--gold); border: 1px solid var(--gold); cursor: pointer; font-weight: bold; border-radius: 5px; }
-        .adm-btn:hover { background: var(--gold); color: #000; }
-
-        /* بار الإرسال */
-        #send-bar { padding: 15px; background: #111; display: flex; gap: 10px; border-top: 2px solid #222; }
-        #msg-in { flex-grow: 1; padding: 12px 20px; border-radius: 30px; border: 1px solid var(--gold); background: #000; color: #fff; outline: none; }
-        .send-btn { background: var(--gold); color: #000; border: none; padding: 0 25px; border-radius: 30px; font-weight: bold; cursor: pointer; }
+        /* لوحة التحكم */
+        #admin-panel { position: absolute; bottom: 70px; left: 10px; background: #fff; border: 2px solid #d4af37; padding: 15px; border-radius: 5px; display: none; box-shadow: 0 0 10px #000; }
     </style>
 </head>
 <body>
 
-    <aside id="sidebar">
-        <div class="profile-card">
-            <img src="https://via.placeholder.com/100/d4af37/000?text=Alloush" id="king-img" class="user-pic" title="اضغط لتغيير الصورة">
-            <div class="king-name">👑 علوش الملك</div>
-            <div style="font-size: 12px; color: #00ff00; margin-top: 5px;">● متصل الآن</div>
-        </div>
-        <div style="padding: 20px;">
-            <p style="color: var(--gold); font-size: 14px;">قائمة المتواجدين:</p>
-            <div id="online-list" style="font-size: 14px;">👑 علوش (الملك)</div>
-        </div>
-    </aside>
+    <div id="top-bar">
+        <span>👑 مملكة علوش | Chat Alloush</span>
+        <button onclick="toggleAdmin()" style="background:#d4af37; border:none; padding:2px 10px; cursor:pointer; font-weight:bold;">التحكم</button>
+    </div>
 
-    <main id="chat-main">
-        <header>
-            <div style="font-size: 22px; font-weight: bold; color: var(--gold);">مملكة علوش</div>
-            <button onclick="toggleAdmin()" style="background:none; border:1px solid var(--gold); color:var(--gold); padding:5px 15px; border-radius:5px; cursor:pointer;">⚙️ لوحة الإدارة</button>
-        </header>
-
-        <div id="messages-view"></div>
-
-        <div id="admin-box">
-            <button class="adm-btn" onclick="changeAvatar()">🖼️ تغيير صورتي</button>
-            <button class="adm-btn" onclick="clearKingdom()" style="color: red; border-color: red;">🧹 تصفير الشات</button>
+    <div id="container">
+        <div id="user-list">
+            <div style="background:#000; color:#fff; padding:5px; text-align:center; font-size:12px;">المتواجدون</div>
+            <div class="user-row">
+                <img src="https://via.placeholder.com/20/gold/black?text=K">
+                <span class="king-name">علوش (الملك)</span>
+            </div>
         </div>
 
-        <div id="send-bar">
-            <input type="text" id="msg-in" placeholder="أصدر مرسومك الملكي يا علوش...">
-            <button class="send-btn" onclick="send()">إرسال ✨</button>
+        <div id="chat-window">
+            <div id="messages"></div>
         </div>
-    </main>
+    </div>
+
+    <div id="admin-panel">
+        <button onclick="clearChat()" style="color:red; cursor:pointer;">🧹 مسح الدردشة بالكامل</button>
+        <hr>
+        <p style="font-size:11px; color:#666;">إعدادات السيرفر متاحة للملك فقط</p>
+    </div>
+
+    <div id="footer">
+        <input type="text" id="msg-input" placeholder="اكتب رسالتك هنا...">
+        <button class="btn-send" onclick="sendMsg()">إرسال</button>
+    </div>
 
     <script>
         const firebaseConfig = { databaseURL: "https://alloush-kingdom-default-rtdb.firebaseio.com" };
         firebase.initializeApp(firebaseConfig);
         const db = firebase.database();
 
-        function send() {
-            const input = document.getElementById('msg-in');
+        function sendMsg() {
+            const input = document.getElementById('msg-input');
             if(input.value.trim() !== "") {
                 db.ref("messages").push().set({
                     user: "علوش",
                     text: input.value,
-                    rank: "الملك",
-                    isKing: true,
                     time: new Date().toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'})
                 });
                 input.value = "";
             }
         }
 
-        db.ref("messages").limitToLast(40).on("child_added", (snapshot) => {
+        db.ref("messages").limitToLast(50).on("child_added", (snapshot) => {
             const data = snapshot.val();
-            const view = document.getElementById('messages-view');
-            const div = document.createElement('div');
-            div.className = `bubble ${data.isKing ? 'king-bubble' : 'user-bubble'}`;
-            div.innerHTML = `<span class="meta">${data.user} (${data.rank}) • ${data.time}</span>${data.text}`;
-            view.appendChild(div);
-            view.scrollTop = view.scrollHeight;
+            const msgArea = document.getElementById('messages');
+            const line = document.createElement('div');
+            line.className = 'chat-line';
+            line.innerHTML = `<span class="king-tag">(الملك)</span> <span style="color:blue; font-weight:bold;">${data.user}:</span> <span style="color:#000;">${data.text}</span> <span class="time">${data.time}</span>`;
+            msgArea.appendChild(line);
+            msgArea.scrollTop = msgArea.scrollHeight;
         });
 
         function toggleAdmin() {
-            const box = document.getElementById('admin-box');
-            box.style.display = box.style.display === 'none' ? 'block' : 'none';
+            const panel = document.getElementById('admin-panel');
+            panel.style.display = panel.style.display === "none" ? "block" : "none";
         }
 
-        function changeAvatar() {
-            const url = prompt("ألصق رابط صورتك الجديدة المربعة:");
-            if(url) {
-                document.getElementById('king-img').src = url;
-                localStorage.setItem('alloush_pfp', url);
-            }
-        }
-
-        function clearKingdom() {
-            if(confirm("سيتم مسح تاريخ المملكة بالكامل، هل أنت متأكد؟")) {
+        function clearChat() {
+            if(confirm("مسح الشات؟")) {
                 db.ref("messages").remove();
                 location.reload();
             }
         }
 
-        window.onload = () => {
-            if(localStorage.getItem('alloush_pfp')) document.getElementById('king-img').src = localStorage.getItem('alloush_pfp');
-        };
-
-        document.getElementById('msg-in').addEventListener('keypress', (e) => { if(e.key === 'Enter') send(); });
+        document.getElementById('msg-input').onkeypress = (e) => { if(e.key === 'Enter') sendMsg(); };
     </script>
 </body>
 </html>
